Increased nav link padding. Fixed hamburger links alignment

--- a/app/components/header/hamburgerNavbar.module.css
+++ b/app/components/header/hamburgerNavbar.module.css
@@ -15,6 +15,9 @@
   margin-bottom: 4rem;
 }
 
+.ul {
+  text-align: left;
+}
 .navItem {
   padding: 1em 0;
 }
