--- a/app/components/header/normalNavbar.module.css
+++ b/app/components/header/normalNavbar.module.css
@@ -22,6 +22,9 @@
   border-bottom: solid white;
 }
 
+.link {
+  padding: 38px 0;
+}
 .notActive:hover {
   border-bottom: solid #fff8;
 }
